2005-09-14  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp: 
		* no need to call the parent in the constructor
		* make it not segfault a exit. we have to investigate if there's a possibility for a memory leak here
	* src/components/ogre/model/ModelDefinitionManager.cpp: MSVC wants to know exact what namespace to look in
	* src/components/ogre/model/ModelDefinitionManager.h: include local copy
	

2005-09-14  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/carpenter/BluePrint.cpp: removed unneeded variable
	* src/components/ogre/environment/Foliage.cpp: MSVC wants to know exact what namespace to look in
	* src/components/ogre/environment/FoliageArea.cpp: Better error output
	* src/components/ogre/jesus/JesusMousePicker.cpp: replace dynamic_cast with static_cast
	* src/components/ogre/jesus/XMLJesisSerializer.cpp: 
		* removed unused variables
		* added MSVC specific code

2005-09-14  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/GUIManager.h: include CEGUIBase.h since MSVC needed it
	* src/components/ogre/TerrainArea.*: added method for setting the Mercator::Area
	* src/components/ogre/TerrainGenerator.cpp: 
		* added MSVC headers
		* added some new methods for easier set up of the terrain
	* src/components/ogre/TerrainPage.cpp: 
		* added some more logging

	
2005-09-14  Erik Hjortsberg  <erik@katastrof.nu>
	
	* src/components/ogre/AvatarCamera.h: MouseMotion is a struct, not a class
	* src/components/ogre/EmberEntity.cpp: don't try to remove the eris bounding box since this will lead to a crash when exiting the app
	* src/components/ogre/GUIManager.cpp:
		* changed all fprintf to S_LOG_* calls
		* take screenshots with the Print screen key, not F8 anymore

2005-09-12  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp: update attached objects position even when not animated, else when a non-animated model moved the attached entites wouldn't move with it
