@@ -41,6 +41,9 @@ namespace EmberOgre
 EmberPagingLandScapeData2D_HeightField::EmberPagingLandScapeData2D_HeightField() 
 : mTerrainPage(0)
 {
+	//set it to something, so it doesn't default to a crazy number (like 5.79555e+022) since that will break stuff later on
+	//in regards to calculating the distance to the tile (especially in PagingLandScapeTile::_Notify)
+	mMaxheight = 100;
 }
 	
 bool EmberPagingLandScapeData2D_HeightField::_load( const Ogre::uint x, const Ogre::uint z )
@@ -61,12 +64,13 @@ bool EmberPagingLandScapeData2D_HeightField::_load( const Ogre::uint x, const Og
 	
 		
 		
-		
+		mMaxheight = mTerrainPage->getMaxHeight();
 		mMax = static_cast <unsigned int> (mSize * mTerrainPage->getMaxHeight());
 		mXDimension = terrainGenerator->getPageSize();
 		mZDimension = terrainGenerator->getPageSize();
-	}
-	
+		return true;
+	} 
+
 	
 	return true;
 		   
